--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@
 # https://app.supabase.com/project/_/settings/api
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+
+LIMITLESS_API_KEY=your_limitless_api_key_here
